<resources>
    <string name="app_name">IUBAT Solutions</string>
    <string name="book_not">Book selling does not mean that you are selling your knowledge. The knowledges are already been stored in you. It means that you are giving an opportunity to others to gain knowledge in a low cost.</string>
    <string name="loan_system_text1">Dear Students, you will be pleased to know that IUBAT provides the opportunity to study with loan. If you face any financial problem like your financial source cannot afford the cost to continue your semester as per sequence in that case you can take place under this Loan System.\n</string>
    <string name="loan_system_text2">\nThere are some conditions to get this opportunity:\n</string>
    <string name="loan_system_text3">\t\t\t\t◧ Your CGPA must be at least 3.00\n\n\t\t\t◧ You need the proper documents why your financial source cannot afford the cost.\n\n\t\t\t◧ You must have to be paid previous dues if you have any.\n</string>
    <string name="waiver_system_conditions1">Dear Students, you will enjoy the waiver system regarding your grade in HSC and SSC. There are some conditions to enjoy this waiver as per sequence:\n\t\t\t\t</string>
    <string name="waiver_system_conditions2">\t\t\t\t◧ Initially you can enjoy your waiver for the first four semesters.\n\n\t\t\t\t◧ From the fifth semester 50% of your waiver will be being decreased if your CGPA is bellow 3.00\n\t\t\t\t</string>
    <string name="waiver_system_conditions3">[For example- you are enjoying 100 percent of waiver. At the fifth semester if your CGPA became bellow 3.00. Then your waiver will be 50 percent. Again if you fail to increase your CPGA at the sixth semester your waiver will be 25 percent. If you cannot increase your CGPA your waiver will be vanished.]\n</string>
    <string name="waiver_system_conditions4">\t\t◧ You can get back full of your waiver if your CGPA become at least 3.00\n</string>
</resources>