<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99CC99"
    android:orientation="vertical"
    tools:context="com.applicationull.iubatsolutions.Scholarship">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="WAIVER"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:textColor="#000"
                />
            <me.biubiubiu.justifytext.library.JustifyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                android:textColor="#000"
                android:text="@string/waiver_system_conditions1"/>

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                android:textColor="#000"
                android:textStyle="bold"
                android:text="@string/waiver_system_conditions2"/>

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                android:textColor="#000"
                android:text="@string/waiver_system_conditions3"/>
            <me.biubiubiu.justifytext.library.JustifyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:text="@string/waiver_system_conditions4"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
